--- a/package.json
+++ b/package.json
@@ -44,15 +44,16 @@
     "class-transformer": "^0.3.1",
     "debug": "^4.1.1",
     "image-size": "^0.7.3",
+    "jsdom": "^25.0.1",
     "json-bigint": "^1.0.0",
     "lodash": "^4.17.20",
-    "luxon": "^1.12.1",
+    "luxon": "3.2.1",
     "reflect-metadata": "^0.1.13",
-    "request": "^2.88.0",
+    "request": "^2.88.2",
     "request-promise": "^4.2.4",
     "rxjs": "^6.5.2",
     "snakecase-keys": "^3.1.0",
-    "tough-cookie": "^2.5.0",
+    "tough-cookie": "4.1.3",
     "ts-custom-error": "^2.2.2",
     "ts-xor": "^1.0.6",
     "url-regex-safe": "^3.0.0",
@@ -68,6 +69,7 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.14.123",
     "@types/luxon": "^1.12.0",
     "@types/node": "^10.14.5",
@@ -83,6 +85,6 @@
     "tslint": "^5.16.0",
     "typedoc": "^0.22.11",
     "typedoc-plugin-markdown": "^3.11.14",
-    "typescript": "^4.3.5"
+    "typescript": "^5.6.3"
   }
 }
